runs/runs/github.com/idontdomath/datos-spark-lab/logs/test-notebook-Wordcount.ipynb-2020-07-21T07.33.txt
[I 200721 07:33:26 inrepo:36] Testing notebook Wordcount.ipynb
[I 200721 07:33:27 execute:404] Executing notebook with kernel: python
Traceback (most recent call last):
  File "/src/inrepo.py", line 114, in <module>
    main()
  File "/src/inrepo.py", line 110, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 75, in run_notebook
    nb, cwd=os.path.dirname(nb_path), kernel_name=kernel_name, timeout=600
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.7/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
data = [1, 2, 3, 4, 5]
distData = sc.parallelize(data)
print distData
------------------

[0;36m  File [0;32m"<ipython-input-1-f38ac40687a4>"[0;36m, line [0;32m3[0m
[0;31m    print distData[0m
[0m                 ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(distData)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(distData)? (<ipython-input-1-f38ac40687a4>, line 3)


Container exited with status: {'Error': None, 'StatusCode': 1}
